...
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
            <connections>
                <outlet property="delegate" destination="248" id="249"/>
...
                    <menu key="submenu" title="File" id="251">
                        <items>
                            <menuItem title="Open…" keyEquivalent="o" id="252">
                                <connections>
                                    <action selector="openDocument:" target="-1" id="254"/>
...
                                <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                            </menuItem>
                            <menuItem title="Import Metadata…" id="400">
                                <connections>
                                    <action selector="importMetadata:" target="-1" id="403"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Export Metadata…" id="401">
                                <connections>
                                    <action selector="exportMetadata:" target="-1" id="404"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Delete Library…" id="402">
                                <connections>
                                    <action selector="deleteLibrary:" target="-1" id="405"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Prune Library…" alternate="YES" id="407">
                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                <connections>
...
                                <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                            </menuItem>
                            <menuItem title="Clear Scrollback" keyEquivalent="k" id="387">
                                <connections>
                                    <action selector="clearScrollback:" target="-1" id="388"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Save Scrollback…" keyEquivalent="s" id="275">
                                <connections>
                                    <action selector="saveAsRTF:" target="-1" id="278"/>
...
                                <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                            </menuItem>
                            <menuItem title="Close Window" keyEquivalent="w" id="253">
                                <connections>
                                    <action selector="performClose:" target="-1" id="255"/>
...
                    </menu>
                </menuItem>
                <menuItem title="Edit" id="450">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Edit" id="451">
                        <items>
                            <menuItem title="Undo" keyEquivalent="z" id="452">
                                <connections>
                                    <action selector="undo:" target="-1" id="518"/>
...
                                </connections>
                            </menuItem>
                            <menuItem title="Delete" id="459">
                                <string key="keyEquivalent" base64-UTF8="YES">
CA
...
                    </menu>
                </menuItem>
                <menuItem title="Game" id="YgY-MU-Rjt" userLabel="Game">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Game" id="3xu-Uj-RHK">
                        <items>
                            <menuItem title="Play Game" keyEquivalent="p" id="395">
                                <connections>
                                    <action selector="play:" target="-1" id="881"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Reveal in Finder" keyEquivalent="r" id="391">
                                <connections>
                                    <action selector="revealGameInFinder:" target="-1" id="394"/>
...
                                </connections>
                            </menuItem>
                            <menuItem title="Show Info…" keyEquivalent="i" id="392" userLabel="Show Info…">
                                <connections>
                                    <action selector="showGameInfo:" target="-1" id="393"/>
...
                                </connections>
                            </menuItem>
                            <menuItem title="Reset Game" keyEquivalent="r" id="872">
                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                <connections>
...
                    </menu>
                </menuItem>
                <menuItem title="Window" id="19">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Window" systemMenu="window" id="24">
...
                                <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                            </menuItem>
                            <menuItem title="Interactive Fiction" keyEquivalent="1" id="353">
                                <connections>
                                    <action selector="showLibrary:" target="248" id="382"/>
...
