...
                                                                        <outlet property="textField" destination="HUt-pA-QEi" id="Ooi-UA-OUb"/>
                                                                    </connections>
                                                                </tableCellView>
                                                            </prototypeCellViews>
                                                        </tableColumn>
                                                    </tableColumns>
                                                    <accessibility description="Games"/>
                                                    <connections>
                                                        <outlet property="dataSource" destination="-2" id="157"/>
                                                        <outlet property="delegate" destination="-2" id="O5H-wN-0rJ"/>
                                                        <outlet property="menu" destination="84" id="159"/>
                                                    </connections>
                                                </tableView>
...
                                    </button>
                                    <button toolTip="Play the selected game" verticalHuggingPriority="750" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="128">
                                        <rect key="frame" x="93" y="3" width="20" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="19" id="Vcz-Bh-mry"/>
                                        </constraints>
                                        <buttonCell key="cell" type="recessed" title="Play" bezelStyle="recessed" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="152">
                                            <behavior key="behavior" lightByContents="YES"/>
                                            <font key="font" metaFont="cellTitle"/>
                                            <imageReference key="image" image="play.circle" catalog="system" symbolScale="large"/>
                                        </buttonCell>
                                        <accessibility description="Play the selected game"/>
                                        <connections>
...
                                        <rect key="frame" x="361" y="6" width="196" height="22"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="100" id="303"/>
                                            <constraint firstAttribute="width" relation="lessThanOrEqual" priority="56" constant="282" id="405"/>
                                            <constraint firstAttribute="width" priority="1" constant="196" id="503"/>
                                        </constraints>
                                        <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="Search" bezelStyle="round" recentsAutosaveName="" id="149">
                                            <font key="font" metaFont="system"/>
                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                        </searchFieldCell>
                                        <accessibility description="Search library"/>
                                        <connections>
...
                        </menu>
                    </popUpButtonCell>
                </popUpButton>
                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" preferredMaxLayoutWidth="59" translatesAutoresizingMaskIntoConstraints="NO" id="48">
                    <rect key="frame" x="12" y="13" width="61" height="16"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="Export:" id="73">
                        <font key="font" metaFont="system"/>
                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                    </textFieldCell>
                </textField>
            </subviews>
...
            <rect key="frame" x="0.0" y="0.0" width="284" height="21"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
            <subviews>
                <button verticalHuggingPriority="750" id="KYK-i7-soe">
                    <rect key="frame" x="-2" y="4" width="286" height="18"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                    <buttonCell key="cell" type="check" title="Force quit running games and delete them." bezelStyle="regularSquare" imagePosition="left" inset="2" id="jKY-04-VDs">
                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                        <font key="font" metaFont="system"/>
                    </buttonCell>
                </button>
            </subviews>
            <point key="canvasLocation" x="-135" y="-219"/>
...
