...

- (void)showDuplicateThemeNameAlert:(NSText *)fieldEditor theme:(Theme *)renamed {
    NSAlert *anAlert = [[NSAlert alloc] init];
    anAlert.messageText =
    [NSString stringWithFormat:NSLocalizedString(@"The theme name \"%@\" is already in use.", nil), fieldEditor.string];
    anAlert.informativeText = NSLocalizedString(@"Please enter another name.", nil);
    [anAlert addButtonWithTitle:NSLocalizedString(@"Okay", nil)];
    [anAlert addButtonWithTitle:NSLocalizedString(@"Discard Change", nil)];

    [anAlert beginSheetModalForWindow:self.window completionHandler:^(NSInteger result){
        if (result == NSAlertSecondButtonReturn) {
            fieldEditor.string = renamed.name;
        }
...


- (NSToolbarItem *)toolbar:(NSToolbar *)toolbar itemForItemIdentifier:(NSToolbarItemIdentifier)itemIdentifier willBeInsertedIntoToolbar:(BOOL)flag {
    NSToolbarItem *toolbarItem = nil;

    if (itemIdentifier == themesPanel) {
        return [self toolbarItemWithImage:@"paintbrush" label:@"Themes" tooltip:@"Select and organize themes" identifier:itemIdentifier];
    } else if (itemIdentifier == stylesPanel) {
        if (@available(macOS 11.0, *)) {
            return [self toolbarItemWithImage:@"butterfly" label:@"Glk Styles" tooltip:@"Glk style settings" identifier:itemIdentifier];
        } else {
            return [self toolbarItemWithImage:@"butterfly.square" label:@"Glk Styles" tooltip:@"Glk style settings" identifier:itemIdentifier];
        }
    } else if (itemIdentifier == presentationPanel) {
        return [self toolbarItemWithImage:@"theatermask.and.paintbrush" label:@"Details" tooltip:@"Presentation settings not covered by Glk styles" identifier:itemIdentifier];
    } else if (itemIdentifier == formatPanel) {
        return [self toolbarItemWithImage:@"compass.drawing" label:@"Format" tooltip:@"Format-specific settings" identifier:itemIdentifier];
    } else if (itemIdentifier == voiceOverPanel) {
        if (@available(macOS 11.0, *)) {
            return [self toolbarItemWithImage:@"voiceover" label:@"VoiceOver" tooltip:@"Text-to-speech settings" identifier:itemIdentifier];
        } else {
            return [self toolbarItemWithImage:@"voiceover.square" label:@"VoiceOver" tooltip:@"Text-to-speech settings" identifier:itemIdentifier];
        }
    } else if (itemIdentifier == miscPanel) {
        return [self toolbarItemWithImage:@"gearshape" label:@"Misc" tooltip:@"Miscellaneous settings" identifier:itemIdentifier];
    } else if (itemIdentifier == globalPanel) {
        return [self toolbarItemWithImage:@"globe" label:@"Global" tooltip:@"Settings that apply to all themes" identifier:itemIdentifier];
    }
    return toolbarItem;
}

...
