//
//  UITests.m
//  UITests
//
//  Created by Administrator on 2021-07-20.
//

#import <XCTest/XCTest.h>

@interface UITests : XCTestCase {
    NSBundle *testBundle;
}

@end

@implementation UITests

- (void)setUp {
    // Put setup code here. This method is called before the invocation of each test method in the class.

    testBundle = [NSBundle bundleForClass:UITests.class];

    // In UI tests it is usually best to stop immediately when a failure occurs.
    self.continueAfterFailure = NO;

    XCUIApplication *app = [[XCUIApplication alloc] init];
    [app launch];

    XCUIElementQuery *menuBarsQuery = app.menuBars;

    XCUIElement *fileMenuBarItem = menuBarsQuery.menuBarItems[@"File"];
    [fileMenuBarItem click];
    [menuBarsQuery.menuItems[@"Delete Library…"] click];
    XCUIElement *alertDialog = app.dialogs.firstMatch;
    XCTAssert([UITests waitForElement:alertDialog toExistWithTimeout:5]);
    XCUIElement *checkbox = alertDialog.checkBoxes[@"Force quit running games and delete them."];
    if (checkbox.exists && [checkbox.value isEqual:@0])
        [checkbox click];
    [alertDialog.buttons[@"Delete Library"] click];

    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
}

/// Waits for the element to exist using XCTWaiter to avoid priority inversion
/// between User-interactive QoS test thread and Default QoS accessibility thread.
+ (BOOL)waitForElement:(XCUIElement *)element toExistWithTimeout:(NSTimeInterval)timeout {
    NSPredicate *predicate = [NSPredicate predicateWithFormat:@"exists == true"];
    XCTNSPredicateExpectation *expectation = [[XCTNSPredicateExpectation alloc] initWithPredicate:predicate object:element];
    return [XCTWaiter waitForExpectations:@[expectation] timeout:timeout] == XCTWaiterResultCompleted;
}

- (BOOL)waitForElement:(XCUIElement *)element toExistWithTimeout:(NSTimeInterval)timeout {
    NSPredicate *predicate = [NSPredicate predicateWithFormat:@"exists == true"];
    XCTNSPredicateExpectation *expectation = [[XCTNSPredicateExpectation alloc] initWithPredicate:predicate object:element];
    return [XCTWaiter waitForExpectations:@[expectation] timeout:timeout] == XCTWaiterResultCompleted;
}

/// Waits for the element to be both existing and hittable, avoiding priority inversion.
+ (BOOL)waitForElement:(XCUIElement *)element toBeHittableWithTimeout:(NSTimeInterval)timeout {
    NSPredicate *predicate = [NSPredicate predicateWithFormat:@"exists == true AND hittable == true"];
    XCTNSPredicateExpectation *expectation = [[XCTNSPredicateExpectation alloc] initWithPredicate:predicate object:element];
    return [XCTWaiter waitForExpectations:@[expectation] timeout:timeout] == XCTWaiterResultCompleted;
}

- (BOOL)waitForElement:(XCUIElement *)element toBeHittableWithTimeout:(NSTimeInterval)timeout {
    NSPredicate *predicate = [NSPredicate predicateWithFormat:@"exists == true AND hittable == true"];
    XCTNSPredicateExpectation *expectation = [[XCTNSPredicateExpectation alloc] initWithPredicate:predicate object:element];
    return [XCTWaiter waitForExpectations:@[expectation] timeout:timeout] == XCTWaiterResultCompleted;
}

+ (NSURL *)tempDir {
    NSURL *usersURL = [NSURL fileURLWithPath:@"/Users"
                                 isDirectory:YES];

    NSError *error = nil;

    NSURL *tempURL = [[NSFileManager defaultManager] URLForDirectory:NSItemReplacementDirectory
                                                            inDomain:NSUserDomainMask
                                                   appropriateForURL:usersURL
                                                              create:YES
                                                               error:&error];
    if (error)
        NSLog(@"tempDir: Error: %@", error);

    return tempURL;
}

+ (void)typeURL:(NSURL *)url intoFileDialog:(XCUIElement *)dialog andPressButtonWithText:(NSString *)buttonText
{
    [UITests typeURL:url intoFileDialog:dialog];

    XCUIElement *openButton = dialog.buttons[buttonText];

    XCTAssert([UITests waitForElement:openButton toExistWithTimeout:5]);
    [openButton click];
}

+ (void)typeURL:(NSURL *)url intoApp:(XCUIApplication *)app andPressButtonWithText:(NSString *)buttonText
{
    [UITests typeURL:url intoApp:app];
    [app typeKey:XCUIKeyboardKeyEnter modifierFlags:XCUIKeyModifierNone];
}

+ (void)typeURL:(NSURL *)url intoFileDialog:(XCUIElement *)dialog {
    [dialog typeKey:@"g" modifierFlags:XCUIKeyModifierCommand | XCUIKeyModifierShift];

    XCUIElement *sheet = dialog.sheets.firstMatch;
    if (!sheet.exists) {
        XCTAssert([UITests waitForElement:sheet toExistWithTimeout:5]);
    }

    [sheet typeText:url.path];
    [sheet typeKey:XCUIKeyboardKeyEnter modifierFlags:XCUIKeyModifierNone];
}

+ (void)typeURL:(NSURL *)url intoApp:(XCUIApplication *)app {
    [app typeKey:@"g" modifierFlags:XCUIKeyModifierCommand | XCUIKeyModifierShift];

    XCUIElement *sheet = app.sheets.firstMatch;
    if(![sheet exists]) {
        [app typeKey:@"g" modifierFlags:XCUIKeyModifierCommand | XCUIKeyModifierShift];
    }

    XCTAssert([UITests waitForElement:sheet toExistWithTimeout:5]);

    [sheet typeText:url.path];
    [sheet typeKey:XCUIKeyboardKeyEnter modifierFlags:XCUIKeyModifierNone];
}

+ (NSString *)transcriptFromFile:(NSString *)fileName {
    NSURL *url = [UITests transcriptWithFormat:@"Plain Text"];

    url = [url URLByAppendingPathComponent:fileName isDirectory:NO];

    NSError *error = nil;
    NSString *comparison = [NSString stringWithContentsOfURL:url encoding:NSUTF8StringEncoding error:&error];

    if (error)
        NSLog(@"Error: %@", error);

    return comparison;
}

+ (NSAttributedString *)attributedTranscriptFromFile:(NSString *)fileName {
    NSURL *url = [UITests transcriptWithFormat:@"Plain Text"];

    url = [url URLByAppendingPathComponent:fileName isDirectory:NO];

    NSError *error = nil;
    NSAttributedString *comparison = [[NSAttributedString alloc] initWithURL:url options:@{NSDocumentTypeDocumentAttribute:NSRTFTextDocumentType} documentAttributes:nil error:&error];

    if (error)
        NSLog(@"Error: %@", error);

    return comparison;
}

+ (NSURL *)transcriptWithFormat:(NSString *)format {

    XCUIApplication *app = [[XCUIApplication alloc] init];
    XCUIElementQuery *menuBarsQuery = app.menuBars;

    [menuBarsQuery.menuBarItems[@"File"] click];

    NSURL *url = [UITests tempDir];

    [menuBarsQuery.menuItems[@"Save Scrollback…"] click];

    XCUIElement *savePanel = app.sheets.firstMatch;

    NSLog(@"Transcript is in directory %@", url.path);

    [UITests typeURL:url intoFileDialog:savePanel];

    XCUIElement *popUp = [savePanel.popUpButtons elementMatchingType:XCUIElementTypePopUpButton identifier:@"saveFormatPopUp"];
    [popUp click];
    [popUp.menuItems[format] click];
    XCUIElement *saveButton = savePanel.buttons[@"Save"];
    [saveButton click];

    XCUIElement *alert = app.sheets.firstMatch;
    if (alert.exists) {
        [alert.buttons[@"Replace"] click];
    }

    return url;
}

+ (NSURL *)saveTranscriptInWindow:(XCUIElement *)gameWin {

    XCUIApplication *app = [[XCUIApplication alloc] init];
    NSURL *transcriptURL = [UITests tempDir];

    NSLog(@"Transcript is in directory %@", transcriptURL.path);

    XCUIElement *savePanel = gameWin.sheets.firstMatch;
    if (!savePanel.exists) {
        XCTAssert([UITests waitForElement:savePanel toExistWithTimeout:5]);
    }

    [UITests typeURL:transcriptURL intoFileDialog:savePanel andPressButtonWithText:@"Save"];

    XCUIElement *alert = app.sheets.firstMatch;
    if (alert.exists) {
        [alert.buttons[@"Replace"] click];
    }
    return transcriptURL;
}

+ (void)turnOnDeterminism:(nullable NSString *)theme {
    [UITests selectTheme:theme];
    XCUIApplication *app = [[XCUIApplication alloc] init];

    [app.toolbars.buttons[@"Details"] click];
    [app.checkBoxes[@"Animate scrolling"] click];

    [app.toolbars.buttons[@"Misc"] click];
    [app.checkBoxes[@"Determinism"] click];

    [app typeKey:@"w" modifierFlags:XCUIKeyModifierCommand];
    [app typeKey:@"r" modifierFlags:XCUIKeyModifierCommand | XCUIKeyModifierOption];
}

+ (void)selectTheme:(nullable NSString *)theme {
    if (!theme.length)
        theme = @"Default";
    XCUIApplication *app = [[XCUIApplication alloc] init];
    [app typeKey:@"," modifierFlags:XCUIKeyModifierCommand];
    XCUIElement *themesTab = app.toolbars.buttons[@"Themes"];
    if (themesTab.exists)
        [themesTab click];
    [app.tables.staticTexts[theme] click];
}

- (void)openCommandScript:(NSString *)name {
    XCUIApplication *app = [[XCUIApplication alloc] init];

    [app typeKey:@"o" modifierFlags:XCUIKeyModifierCommand | XCUIKeyModifierCommand];

    name = [NSString stringWithFormat:@"%@ command script", name];

    NSURL *url = [testBundle URLForResource:name
                              withExtension:@"txt"
                               subdirectory:nil];

    [UITests typeURL:url intoApp:app andPressButtonWithText:@"Open"];

    XCUIElement *alert = app.dialogs[@"alert"];
    if (alert.exists) {
        [alert.checkBoxes.firstMatch click];
        [alert.buttons[@"Okay"] click];
    }
}

- (NSString *)comparisonTranscriptFor:(NSString *)name {
    name = [NSString stringWithFormat:@"Transcript of %@", name];

    NSURL *url = [testBundle URLForResource:name
                              withExtension:@"txt"
                               subdirectory:nil];

    NSError *error = nil;
    NSString *facit = [NSString stringWithContentsOfURL:url encoding:NSUTF8StringEncoding error:&error];
    if (error)
        NSLog(@"Error: %@", error);
    return facit;
}

//- (void)testTetrisAutorestore {
//
//    XCUIApplication *app = [[XCUIApplication alloc] init];
//
//    XCUIElement *textField = [self addAndSelectGame:@"freefall.z5"];
//    [textField doubleClick];
//
//    XCUIElement *gamewin = app/*@START_MENU_TOKEN@*/.windows[@"gameWinZCODE-2-951111-2084"]/*[[".windows[@\"Tetris\"]",".windows[@\"gameWinZCODE-2-951111-2084\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/;
//
//    XCUIElement *alertSheet = gamewin.sheets[@"alert"];
//    if ([alertSheet waitForExistenceWithTimeout:5]) {
//        [alertSheet.checkBoxes[@"Remember this choice."] click];
//        [alertSheet.buttons[@"Continue"] click];
//    }
//
//    XCUIElement *lowerScrollView = gamewin.scrollViews[@"buffer scroll view"];
//
//
//    XCUIElement *lowerTextView = [lowerScrollView childrenMatchingType:XCUIElementTypeTextView].element;
//
//    XCUIElement *upperTextView = [gamewin.staticTexts elementBoundByIndex:0];
//
//    // Reset any autorestored game running
//    [lowerTextView typeKey:@"r" modifierFlags:XCUIKeyModifierCommand | XCUIKeyModifierOption];
//
//    NSPredicate *predicate = [NSPredicate predicateWithFormat:@"value CONTAINS 'You wake up.'"];
//    XCTNSPredicateExpectation *expectation = [[XCTNSPredicateExpectation alloc] initWithPredicate:predicate object:lowerTextView];
//
//    XCTAssertEqual([XCTWaiter waitForExpectations:@[expectation] timeout:5], XCTWaiterResultCompleted);
//
//    // Start the tiles falling
//    [lowerTextView typeKey:@" " modifierFlags:XCUIKeyModifierNone];
//
//    CGRect textRect = lowerTextView.frame;
//    CGRect scrollRect = lowerScrollView.frame;
//    CGRect statusRect = upperTextView.frame;
//
//    XCTAssertEqual(textRect.origin.y, scrollRect.origin.y,
//                   @"textView origin doesn't match scrollView origin");
//
//    [gamewin.buttons[XCUIIdentifierCloseWindow] click];
//    [textField doubleClick];
//
//    XCTAssert(NSEqualRects(textRect, lowerTextView.frame));
//    NSLog(@"Lower text view rects match: %@", NSStringFromRect(textRect));
//    XCTAssert(NSEqualRects(scrollRect, lowerScrollView.frame));
//    NSLog(@"Lower scroll view rects match: %@", NSStringFromRect(scrollRect));
//    XCTAssert(NSEqualRects(statusRect, upperTextView.frame));
//    NSLog(@"Status window view rects match: %@", NSStringFromRect(statusRect));
//}
//
//- (void)testImportGame {
//    XCUIApplication *app = [[XCUIApplication alloc] init];
//
//    XCUIElement *libraryWindow = app.windows[@"library"];
//    XCUIElement *foundElement = [self addAndSelectGame:@"freefall.z5"];
//    [foundElement typeKey:XCUIKeyboardKeyDelete modifierFlags:XCUIKeyModifierCommand];
//
//    XCUIElement *alertDialog = app.dialogs[@"alert"];
//    if (alertDialog.exists)
//        [alertDialog.buttons[@"Delete"] click];
//
//    XCTAssert(!foundElement.exists);
//
//    foundElement = [self addAndSelectGame:@"freefall.z5"];
//    [foundElement doubleClick];
//    XCUIElement *gamewin = app/*@START_MENU_TOKEN@*/.windows[@"gameWinZCODE-2-951111-2084"]/*[[".windows[@\"Tetris\"]",".windows[@\"gameWinZCODE-2-951111-2084\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/;
//    if (!gamewin.exists)
//        gamewin = app.windows[@"freefall.z5"];
//    if (!gamewin.exists)
//        gamewin = app.windows[@"Tetris"];
//    XCTAssert(gamewin.exists);
//
//    [app typeKey:@"1" modifierFlags:XCUIKeyModifierCommand];
//
//    XCUIElement *searchSearchField = libraryWindow/*@START_MENU_TOKEN@*/.searchFields[@"Search"]/*[[".splitGroups[@\"SplitViewTotal\"].searchFields[@\"Search\"]",".searchFields[@\"Search\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/;
//    XCUIElement *cancelButton = searchSearchField.buttons[@"cancel"];
//    if (cancelButton.exists)
//        [cancelButton click];
//    [searchSearchField click];
//}

- (void)testFileMenu {
    XCUIApplication *app = [[XCUIApplication alloc] init];

    XCUIElementQuery *menuBarsQuery = app.menuBars;

    XCUIElement *fileMenuBarItem = menuBarsQuery.menuBarItems[@"File"];
    if (![self waitForElement:fileMenuBarItem toBeHittableWithTimeout:5]) {
        XCUIElement *gamewinzcode169510244de6Window = app/*@START_MENU_TOKEN@*/.windows[@"gameWinZCODE-16-951024-4DE6"]/*[[".windows[@\"Curses\"]",".windows[@\"gameWinZCODE-16-951024-4DE6\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/;
        [[gamewinzcode169510244de6Window.scrollViews[@"buffer scroll view"] childrenMatchingType:XCUIElementTypeTextView].element typeKey:@"f" modifierFlags:(XCUIKeyModifierCommand | XCUIKeyModifierControl)];
        fileMenuBarItem = menuBarsQuery.menuBarItems[@"File"];
    }
    [fileMenuBarItem click];
    [menuBarsQuery.menuItems[@"Open…"] click];

    NSURL *url = [testBundle URLForResource:@"curses"
                              withExtension:@"z5"
                               subdirectory:nil];

    [UITests typeURL:url intoApp:app andPressButtonWithText:@"Open"];

    NSArray *menuItemTitles = @[@"Edited Entries", @"Games in Library", @"Complete Database"];

    for (NSString *menuItem in menuItemTitles) {

        [menuBarsQuery.menuItems[@"Export Metadata…"] click];

        XCUIElement *saveDialog = app.sheets.firstMatch;

        XCTAssert([self waitForElement:saveDialog toExistWithTimeout:5]);

        NSURL *path = url.URLByDeletingLastPathComponent;

        [UITests typeURL:path intoFileDialog:saveDialog];

        saveDialog = app.sheets.firstMatch;

        XCUIElement *popup;

        // We try all three strings until one matches
        for (NSString *popUpString in menuItemTitles) {
            popup = saveDialog.popUpButtons[popUpString];
            if (popup.exists)
                break;
        }

        [popup click];

        [saveDialog.menuItems[menuItem] click];

        XCUIElement *exportButton = saveDialog.buttons[@"Export"];
        [exportButton click];

        // When the target file already exists, a "file exists" confirmation
        // is presented as a second sheet stacked on top of the save panel.
        // app.sheets.firstMatch resolves to the save panel rather than the
        // alert, so scope the query to the save-panel sheet and let the
        // recursive buttons query reach the Replace button in the nested
        // alert sheet. This also avoids the duplicate Replace button that
        // lives on the Touch Bar. The alert button reports itself as not
        // hittable, so wait for it to merely exist (click derives a
        // coordinate from its frame). Use a generous timeout; otherwise the
        // undismissed alert keeps the save panel open and derails the next
        // iteration.
        XCUIElement *replaceButton = app.sheets[@"save-panel"].buttons[@"Replace"];
        if ([self waitForElement:replaceButton toExistWithTimeout:5]) {
            [replaceButton click];
        }

        // An export may cause a "No metadata exported" alert.
        // Dismiss it before the next iteration; otherwise it stays modal and
        // the next "Export Metadata…" never opens a fresh save panel.
        XCUIElement *alert = app.dialogs[@"alert"];
        if ([self waitForElement:alert.buttons.firstMatch toBeHittableWithTimeout:5]) {
            [alert.buttons.firstMatch click];
        }
    }
}

- (void)testMoreFileMenu {

    XCUIApplication *app = [[XCUIApplication alloc] init];

    XCUIElementQuery *menuBarsQuery = app.menuBars;

    XCUIElement *fileMenuBarItem = menuBarsQuery.menuBarItems[@"File"];
    XCUIElement *gameMenuBarItem = menuBarsQuery.menuBarItems[@"Game"];
    [fileMenuBarItem click];
    [menuBarsQuery.menuItems[@"Open…"] click];

    NSURL *url = [testBundle URLForResource:@"imagetest"
                              withExtension:@"gblorb"
                               subdirectory:nil];

    [UITests typeURL:url intoApp:app andPressButtonWithText:@"Open"];

    [gameMenuBarItem click];
    [menuBarsQuery/*@START_MENU_TOKEN@*/.menuItems[@"Reveal in Finder"]/*[[".menuBarItems[@\"File\"]",".menus.menuItems[@\"Reveal in Finder\"]",".menuItems[@\"Reveal in Finder\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/ click];

    [app terminate];
    // Quit and restart the app to get back from Finder
    [app launch];
    XCTAssert([self waitForElement:app toExistWithTimeout:5]);

    [menuBarsQuery.menuBarItems[@"Window"] click];
    [menuBarsQuery.menuItems[@"Interactive Fiction"] click];

    XCUIElement *libraryWindow = app/*@START_MENU_TOKEN@*/.windows[@"library"]/*[[".windows[@\"Interactive Fiction\"]",".windows[@\"library\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/;

    XCUIElement *searchSearchField = libraryWindow.searchFields.firstMatch;

    XCUIElement *cancelButton = searchSearchField.buttons[@"cancel"];
    if (cancelButton.exists)
        [cancelButton click];
    [searchSearchField click];
    [searchSearchField typeText:@"image"];

    [[[libraryWindow/*@START_MENU_TOKEN@*/.tables[@"Games"]/*[[".splitGroups[@\"SplitViewTotal\"]",".scrollViews.tables[@\"Games\"]",".tables[@\"Games\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tableRows childrenMatchingType:XCUIElementTypeCell] elementBoundByIndex:0] click];

    [gameMenuBarItem.menuItems[@"Show Info…"] click];
    [app typeText:@" "];
    [[[libraryWindow/*@START_MENU_TOKEN@*/.tables[@"Games"]/*[[".splitGroups[@\"SplitViewTotal\"]",".scrollViews.tables[@\"Games\"]",".tables[@\"Games\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tableRows childrenMatchingType:XCUIElementTypeCell] elementBoundByIndex:0] click];
    [gameMenuBarItem click];
    [menuBarsQuery.menuItems[@"Play Game"] click];

    [menuBarsQuery.menuBarItems[@"Window"] click];

    [/*@START_MENU_TOKEN@*/[[app.menuBarItems matchingIdentifier:@"_NS:381"].menuItems matchingIdentifier:@"makeKeyAndOrderFront:"].firstMatch/*[["app","[[",".menuItems matchingIdentifier:@\"makeKeyAndOrderFront:\"] elementBoundByIndex:0]",".menus matchingIdentifier:@\"_NS:383\"].menuItems matchingIdentifier:@\"imagetest.gblorb\"].firstMatch",".menuBarItems matchingIdentifier:@\"_NS:381\"].menuItems matchingIdentifier:@\"makeKeyAndOrderFront:\"].firstMatch"],[[[-1,0,1]],[[1,4],[1,3],[1,2]]],[0,0]]@END_MENU_TOKEN@*/ click];
    
    XCUIElement *gameWindow = app.windows[@"imagetest.gblorb"];
    [XCUIElement performWithKeyModifiers:XCUIKeyModifierOption block:^{
        [gameWindow.buttons[XCUIIdentifierFullScreenWindow] click];
    }];
    [gameMenuBarItem click];
    [menuBarsQuery/*@START_MENU_TOKEN@*/.menuItems[@"Reset Game"]/*[[".menuBarItems[@\"File\"]",".menus.menuItems[@\"Reset Game\"]",".menuItems[@\"Reset Game\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/ click];
    [fileMenuBarItem click];
    [menuBarsQuery/*@START_MENU_TOKEN@*/.menuItems[@"Close Window"]/*[[".menuBarItems[@\"File\"]",".menus.menuItems[@\"Close Window\"]",".menuItems[@\"Close Window\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/ click];
    libraryWindow = app/*@START_MENU_TOKEN@*/.windows[@"library"]/*[[".windows[@\"Interactive Fiction\"]",".windows[@\"library\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/;
    XCTAssert([self waitForElement:libraryWindow toExistWithTimeout:5]);
    [libraryWindow.toolbars.buttons[@"Play"] click];
    [fileMenuBarItem click];
    [menuBarsQuery/*@START_MENU_TOKEN@*/.menuItems[@"Clear Scrollback"]/*[[".menuBarItems[@\"File\"]",".menus.menuItems[@\"Clear Scrollback\"]",".menuItems[@\"Clear Scrollback\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/ click];

    XCUIElement *gamewin = app.windows[@"imagetest.gblorb"];

    XCUIElement *textView = [gamewin.scrollViews[@"buffer scroll view"] childrenMatchingType:XCUIElementTypeTextView].element;
    [textView click];
    [textView typeText:@"image\r"];
    [textView typeText:@"image left link\r"];

    [textView typeText:@"image right\r"];

    NSArray *menuItemTitles = @[@"Rich Text Format with images", @"Rich Text Format without images", @"Plain Text"];

    for (NSString *menuItem in menuItemTitles) {
        [fileMenuBarItem click];
        [menuBarsQuery.menuItems[@"Save Scrollback…"] click];
        XCUIElement *savePanel = gamewin.sheets[@"save-panel"];
        XCTAssert([self waitForElement:savePanel toExistWithTimeout:5]);
       [[savePanel.popUpButtons elementMatchingType:XCUIElementTypePopUpButton identifier:@"saveFormatPopUp"] click];

        [savePanel.menuItems[menuItem] click];
        XCUIElement *saveButton = savePanel.buttons[@"Save"];
        [saveButton click];

        XCUIElement *alert = app.sheets.firstMatch;
        if (alert.exists) {
            [alert.buttons[@"Replace"] click];
        }
    }

    [fileMenuBarItem click];
    [XCUIElement performWithKeyModifiers:XCUIKeyModifierOption block:^{
        [menuBarsQuery.menuItems[@"Prune Library…"] click];
    }];

    XCUIElement *alertDialog = app.dialogs[@"alert"];
    [alertDialog.buttons[@"Prune"] click];
    [fileMenuBarItem click];
    [menuBarsQuery.menuItems[@"Delete Library…"] click];
    [app/*@START_MENU_TOKEN@*/.checkBoxes[@"Force quit running games and delete them."]/*[[".dialogs[@\"alert\"].checkBoxes[@\"Force quit running games and delete them.\"]",".checkBoxes[@\"Force quit running games and delete them.\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/ click];
    [alertDialog.buttons[@"Delete Library"] click];
    [menuBarsQuery.menuBarItems[@"Edit"] click];
    [menuBarsQuery.menuItems[@"Undo"] click];
}

- (void)testImportMetadata {
    XCUIApplication *app = [[XCUIApplication alloc] init];

    XCUIElementQuery *menuBarsQuery = app.menuBars;

    [menuBarsQuery.menuItems[@"Import Metadata…"] click];

    XCUIElement *openDialog = app.sheets.firstMatch;
    XCTAssert([self waitForElement:openDialog toExistWithTimeout:5]);

    NSURL *url = [testBundle URLForResource:@"test_stories"
                              withExtension:@"iFiction"
                               subdirectory:nil];

    [UITests typeURL:url intoFileDialog:openDialog andPressButtonWithText:@"Import"];
}

